feat: ajouter code_secret, email et sexe aux clients et comptes - ajout migrations et seeders
